tests/miniJava/neg/002456_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = 0 [ 0 public int [] java ( ) { return 0 ; } ] ; } }
